Do not disable immersive mode if exit fullscreen in tablet mode.

The previous cl
https://chromium-review.googlesource.com/c/chromium/src/+/1166254/5
disabled the immersive mode if window exits fullscreen.

This should only did for window in clamshell mode, since in tablet
mode, we still want to keep immersive mode enabled even window is
not in fullscreen mode. Like window is maximized or snapped, the
caption of the window should still be hidden and can be dragged
from top.

Bug: 875098
Change-Id: I9727b15c19b6955467e8db89deb2586421167c80
Reviewed-on: https://chromium-review.googlesource.com/1188460
Commit-Queue: Min Chen <minch@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587400}
Former-commit-id: d2586387e0cfc4d773795c147c652765dcdf575b